--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Contact Directory",
   "main": "server.js",
   "scripts": {
-    "test": "mocha",
-    "start": "node server.js"
+    "test": "mocha __tests__/**/*.js -r dotenv/config",
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -19,13 +19,16 @@
   "homepage": "https://github.com/otejiri/phonebook#readme",
   "dependencies": {
     "@graphql-tools/merge": "^8.2.1",
+    "@graphql-tools/stitch": "^8.4.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
+    "graphql": "^16.0.1",
     "hat": "0.0.3",
     "mongoose": "^6.0.12"
   },
   "devDependencies": {
+    "chai": "^4.3.4",
     "chai-http": "^4.3.0",
     "mocha": "^9.1.3",
     "nodemon": "^2.0.14"
